frontend/src/styles/About.css
.font-style {
  font-family: serif;
  /* background-color: bisque; */
  background-color: rgb(247, 235, 221);

}

.center {
  text-align: center;
}

.summary {
  padding-left: 150px;
  padding-right: 150px;
  padding-top: 20px;
  padding-bottom: 20px;
  font-size: 20px;
}

.main-card {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 20px;
}
.card:hover {
  box-shadow: 0 0 11px rgba(33, 33, 33, 0.2);
}
.profile-img {
  align-items: center;
  justify-content: center;
  object-fit: cover !important;
  width: 1 !important;
  height: 350px !important;
  border-radius: 50% !important;
  /* margin: 25px !important; */
  margin-bottom: 0px !important;
  display: block !important;
}

.card_deck {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  grid-gap: 0.5rem;
}
.embed-responsive .card-img-top {
  width: 20px;
  height: 50px;
  object-fit: cover;
}
.card {
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: "Josefin Sans", Georgia, Times, serif;
}
h1 {
  font-family: "Josefin Sans", Georgia, Times, serif;
}
h2 {
  font-family: "Josefin Sans", Georgia, Times, serif;
}
h2 {
  font-family: "Josefin Sans", Georgia, Times, serif;
}
p {
  font-family: "Josefin Sans", Georgia, Times, serif;
}
a.card-block {
  color: inherit;
}
a.card,
a.card:hover {
  color: black;
  text-decoration: none;
}
.info-card-img-top {
  align-items: center;
  justify-content: center;
  object-fit: cover !important;
  width: 250px !important;
  height: 250px !important;
  /* margin: 25px !important; */
  margin-bottom: 0px !important;
  margin-top: 20px !important;
  display: block !important;
}

.pageStyle {
  padding-bottom: 128px;
}

.city-card-img-top {
  align-items: center;
  justify-content: center;
  object-fit: cover !important;
  width: 100% !important;
  height: 250px !important;
  /* margin: 25px !important; */
  margin-bottom: 0px !important;
  margin-top: 0px !important;
  display: block !important;
}
/* 
#module {
  width: 500px;
}

#module a.collapsed:after {
  content: '+ Show More';
}

#module a:not(.collapsed):after {
  content: '- Show Less';
}

#module #collapseParagraph.collapse:not(.show) {
  display: block;
  height: 1.5em;
  overflow: hidden;
}

#module #collapseParagraph.collapsing {
  height: 1.5em;
} */

#module {
  width: 500px;
  font-size: 14px;
  line-height: 1.5;
}

#module a.collapsed:after {
  content: "+ Show More";
}

#module a:not(.collapsed):after {
  content: "- Show Less";
}

